<resources>
    <string name="app_name">HarryPotterInfoApp</string>

    <!-- Character UI Data Class-->
    <string name="wizard">Wizard</string>
    <string name="squib">Squib</string>
    <string name="muggle">Muggle</string>
    <string name="animal">Animal</string>
    <string name="hogwarts_student">Hogwarts student</string>
    <string name="hogwarts_stuff">Hogwarts stuff</string>
    <string name="not_a_student_or_stuff">Not a student or stuff</string>

    <!-- Character RecyclerView Item-->
    <string name="type">Type</string>
    <string name="character_name">CHARACTER NAME </string>

    <!-- PotterDB Item-->
    <string name="name">NAME</string>

    <!-- Home Fragment -->
    <string name="characters">CHARACTERS</string>
    <string name="potions">POTIONS</string>
    <string name="spells">SPELLS</string>

    <string name="all">All</string>
    <string name="gryffindor">Gryffindor</string>
    <string name="slytherin">Slytherin</string>
    <string name="hufflepuff">Hufflepuff</string>
    <string name="ravenclaw">Ravenclaw</string>

    <string-array name="character_filter_array">
        <item>@string/all</item>
        <item>@string/gryffindor</item>
        <item>@string/slytherin</item>
        <item>@string/hufflepuff</item>
        <item>@string/ravenclaw</item>
        <item>@string/unknown</item>
    </string-array>

    <!-- Image Content Descriptions-->
    <string name="ic_harry_potter">Harry Potter icon</string>
    <string name="iv_character_photo">Character photo</string>
    <string name="ic_live_or_dead">Character is live or dead information</string>
    <string name="ic_house">Character house information</string>
    <string name="iv_spell_or_potion_photo">Spell or potion photo</string>
    <string name="iv_potion_photo">Potion photo</string>
    <string name="iv_spell_photo">Spell photo</string>

    <!-- Character Detail Fragment XML -->
    <string name="alternative_names_header">Alternative Names:</string>
    <string name="actor_header">Actor:</string>
    <string name="species_header">Species:</string>
    <string name="patronus_header">Patronus:</string>
    <string name="stuff_or_student_header">Stuff or Student:</string>
    <string name="wand_core_header">Wand Core:</string>
    <string name="gender_header">Gender:</string>

    <!-- Potion Detail Fragment XML -->
    <string name="inventors_header">Inventors:</string>
    <string name="manufacturers_header">Manufacturers:</string>
    <string name="side_effect_header">Side Effect:</string>
    <string name="characteristics_header">Characteristics:</string>
    <string name="time_header">Time:</string>
    <string name="difficulty_header">Difficulty:</string>
    <string name="ingredients_header">Ingredients:</string>

    <string name="unknown">Unknown</string>

    <!--Potion and Spell Fragment Common Strings-->
    <string name="effect_header">Effect:</string>
    <string name="wikipedia">Wikipedia</string>

    <!-- Spell Detail Fragment XML -->
    <string name="incantation_header">Incantation:</string>
    <string name="creator_header">Creator:</string>
    <string name="category_header">Category:</string>
    <string name="light_header">Light:</string>
    <string name="hand_header">Hand:</string>

    <!-- Favorite Type -->
    <string name="character">character</string>
    <string name="potion">potion</string>
    <string name="spell">spell</string>

    <string name="not_connect_message">Check your internet connection</string>
</resources>