<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/shape_recycler_view_item_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="@dimen/size_100"
            android:layout_height="@dimen/size_100"
            android:contentDescription="@string/iv_character_photo"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            style="@style/Text.T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:text="@string/character_name"
            app:layout_constraintBottom_toTopOf="@id/tvType"
            app:layout_constraintStart_toEndOf="@id/ivPhoto"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/icLiveOrDead"
            android:layout_width="@dimen/size_24"
            android:layout_height="@dimen/size_24"
            android:layout_marginStart="@dimen/margin_32"
            android:contentDescription="@string/ic_live_or_dead"
            app:layout_constraintBottom_toBottomOf="@id/tvType"
            app:layout_constraintEnd_toStartOf="@id/tvType"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/ivPhoto"
            app:layout_constraintTop_toTopOf="@id/tvType" />

        <TextView
            android:id="@+id/tvType"
            style="@style/Text.T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/icLiveOrDead"
            app:layout_constraintTop_toBottomOf="@id/tvName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:layout_margin="@dimen/margin_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/animation_heart" />

    <ImageView
        android:id="@+id/icHouse"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:layout_marginEnd="@dimen/margin_16"
        android:contentDescription="@string/ic_house"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>