<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".ui.detail.PotionDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/padding_16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icHarryPotter"
                android:layout_width="@dimen/size_48"
                android:layout_height="@dimen/size_48"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/ic_hp"
                android:contentDescription="@string/ic_harry_potter"
                app:layout_constraintBottom_toTopOf="@id/ivPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="@dimen/size_200"
                android:layout_height="@dimen/size_200"
                android:contentDescription="@string/iv_potion_photo"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icHarryPotter" />

            <TextView
                android:id="@+id/tvName"
                style="@style/Text.T3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:gravity="center"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@id/llInventorsAndManufacturers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

            <LinearLayout
                android:id="@+id/llInventorsAndManufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/shape_detail_info_item_background"
                android:orientation="vertical"
                android:padding="@dimen/padding_16"
                app:layout_constraintBottom_toTopOf="@id/llGeneralInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                app:layout_constraintVertical_chainStyle="packed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Text.T2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_8"
                        android:text="@string/inventors_header"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvInventors"
                        style="@style/Text.T1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Text.T2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_8"
                        android:text="@string/manufacturers_header"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvManufacturers"
                        style="@style/Text.T1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGeneralInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/shape_detail_info_item_background"
                android:orientation="vertical"
                android:padding="@dimen/padding_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llInventorsAndManufacturers">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_8">

                    <TextView
                        style="@style/Text.T2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_4"
                        android:text="@string/effect_header"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvEffect"
                        style="@style/Text.T1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_4">

                    <TextView
                        style="@style/Text.T2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_8"
                        android:text="@string/side_effect_header"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvSideEffect"
                        style="@style/Text.T1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_4">

                    <TextView
                        style="@style/Text.T2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_8"
                        android:text="@string/characteristics_header"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvCharacteristics"
                        style="@style/Text.T1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_4">

                    <TextView
                        style="@style/Text.T2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_8"
                        android:text="@string/time_header"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvTime"
                        style="@style/Text.T1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_4">

                    <TextView
                        style="@style/Text.T2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_8"
                        android:text="@string/difficulty_header"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvDifficulty"
                        style="@style/Text.T1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/shape_detail_info_item_background"
                android:orientation="vertical"
                android:padding="@dimen/padding_16"
                app:layout_constraintBottom_toTopOf="@id/btnWikipedia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llGeneralInfo">

                <TextView
                    style="@style/Text.T2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients_header" />

                <TextView
                    android:id="@+id/tvIngredients"
                    style="@style/Text.T1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWikipedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/shape_detail_info_item_background"
                android:text="@string/wikipedia"
                android:textAppearance="@style/Text.T3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llIngredients" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>